--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "fs-extra": "8.0.1",
     "helmet": "3.18.0",
     "http-server": "0.11.1",
+    "knex": "0.17.6",
     "logdown": "3.2.8",
     "moment": "2.24.0",
-    "pm2": "3.5.1"
+    "pm2": "3.5.1",
+    "sqlite3": "4.0.9"
   },
   "description": "Receive and display data from your luftdaten device",
   "devDependencies": {
