--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "description": "Receive and display data from your luftdaten device",
   "devDependencies": {
+    "@ffflorian/jszip-cli": "2.3.1",
     "@ffflorian/prettier-config": "0.0.5",
     "@ffflorian/tslint-config": "0.3.0",
     "@types/body-parser": "1.17.0",
@@ -78,7 +79,8 @@
     "prettier": "prettier \"*.{json,md}\"",
     "start": "pm2 start",
     "start:dev": "cross-env NODE_DEBUG=\"luftdaten-server/*\" ts-node src/index.ts",
-    "test": "exit 0"
+    "test": "exit 0",
+    "zip": "rimraf zip && jszip-cli"
   },
   "version": "1.0.0"
 }
