--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cross-env": "5.2.0",
     "dotenv": "8.0.0",
     "express": "4.17.1",
+    "express-handlebars": "3.1.0",
     "fs-extra": "8.0.1",
     "helmet": "3.18.0",
     "http-server": "0.11.1",
@@ -24,6 +25,7 @@
     "@types/compression": "0.0.36",
     "@types/dotenv": "6.1.1",
     "@types/express": "4.17.0",
+    "@types/express-handlebars": "0.0.32",
     "@types/fs-extra": "7.0.0",
     "@types/helmet": "0.0.43",
     "@types/moment": "2.13.0",
