--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "4.17.1",
     "express-handlebars": "3.1.0",
     "fs-extra": "8.0.1",
+    "handlebars-helpers": "0.10.0",
     "helmet": "3.18.0",
     "http-server": "0.11.1",
     "knex": "0.17.6",
@@ -29,6 +30,7 @@
     "@types/express": "4.17.0",
     "@types/express-handlebars": "0.0.32",
     "@types/fs-extra": "7.0.0",
+    "@types/handlebars-helpers": "0.5.2",
     "@types/helmet": "0.0.43",
     "@types/moment": "2.13.0",
     "@types/node": "~12",
@@ -58,7 +60,7 @@
   ],
   "license": "MIT",
   "lint-staged": {
-    "*.{json,md}": [
+    "*.{json,md,css}": [
       "prettier --write",
       "git add"
     ],
