--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "tslint-plugin-prettier": "2.0.1",
     "typescript": "3.5.2"
   },
+  "engines": {
+    "node": ">= 8.0.0"
+  },
   "files": [
     "dist"
   ],
