--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lint-staged": "9.2.0",
     "prettier": "1.18.2",
     "rimraf": "2.6.3",
+    "swagger-markdown": "1.2.0",
     "ts-node": "8.3.0",
     "tslint": "5.18.0",
     "tslint-config-prettier": "1.18.0",
@@ -69,7 +70,9 @@
   "prettier": "@ffflorian/prettier-config",
   "repository": "https://github.com/ffflorian/lufdaten-server.git",
   "scripts": {
-    "build": "tsc",
+    "build": "yarn build:node && yarn build:docs",
+    "build:node": "tsc",
+    "build:docs": "node bin/swagger_docs.js",
     "clean": "rimraf dist",
     "dist": "yarn clean && yarn build && node bin/commit_hash.js",
     "fix": "yarn fix:other && yarn fix:ts",
@@ -80,7 +83,7 @@
     "lint:ts": "tslint --project tsconfig.json",
     "prettier": "prettier \"*.{json,md}\"",
     "start": "pm2 start",
-    "start:dev": "cross-env NODE_DEBUG=\"luftdaten-server/*\" ENVIRONMENT=\"dev\" ts-node src/index.ts",
+    "start:dev": "cross-env NODE_DEBUG='luftdaten-server/*' ENVIRONMENT='dev' ts-node src/index.ts",
     "test": "exit 0"
   },
   "version": "1.0.0"
