chore: Use if check on job level in workflows [ci skip]

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and lint
+name: Build
 
 on: [push, pull_request]
 
@@ -6,6 +6,9 @@ jobs:
   build_lint:
     name: Build and lint
     runs-on: ubuntu-latest
+    if: |
+      !contains(github.event.head_commit.message, '[ci skip]') &&
+      !contains(github.event.head_commit.message, '[skip ci]')
     steps:
       - name: Checkout repository
         uses: actions/checkout@v1
@@ -26,6 +29,3 @@ jobs:
           yarn
           yarn lint
           yarn dist
-        if: |
-          contains(github.event.commits[0].message, '[skip ci]') == false &&
-          contains(github.event.commits[0].message, '[ci skip]') == false
