--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
     "@types/swagger-schema-official": "2.0.21",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
-    "cross-env": "7.0.2",
+    "date-fns": "2.12.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "fs-extra": "9.0.0",
     "knex": "0.21.1",
     "logdown": "3.3.1",
-    "moment": "2.24.0",
     "pm2": "4.4.0",
     "sqlite3": "4.2.0",
     "swagger-ui-express": "4.1.4"
@@ -25,6 +24,7 @@
     "@types/fs-extra": "8.1.0",
     "@types/node": "~12",
     "@types/swagger-ui-express": "4.1.2",
+    "cross-env": "7.0.2",
     "husky": "4.2.5",
     "lint-staged": "10.2.2",
     "prettier": "2.0.5",
