--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "fs-extra": "9.0.0",
+    "http-status-codes": "1.4.0",
     "knex": "0.21.1",
     "logdown": "3.3.1",
     "pm2": "4.4.0",
@@ -16,28 +17,38 @@
   },
   "description": "Receive and serve data from your luftdaten device",
   "devDependencies": {
+    "@ffflorian/eslint-config": "0.3.3",
     "@ffflorian/prettier-config": "0.0.6",
-    "@ffflorian/tslint-config": "0.7.1",
     "@types/body-parser": "1.19.0",
     "@types/compression": "1.7.0",
     "@types/express": "4.17.6",
     "@types/fs-extra": "8.1.0",
     "@types/node": "~12",
     "@types/swagger-ui-express": "4.1.2",
+    "@typescript-eslint/eslint-plugin": "2.33.0",
+    "@typescript-eslint/parser": "2.33.0",
+    "babel-eslint": "10.1.0",
     "cross-env": "7.0.2",
+    "eslint": "7.0.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jasmine": "4.1.1",
+    "eslint-plugin-jsdoc": "25.4.0",
+    "eslint-plugin-no-unsanitized": "3.1.1",
+    "eslint-plugin-prettier": "3.1.3",
+    "eslint-plugin-simple-import-sort": "5.0.3",
+    "eslint-plugin-sort-keys-fix": "1.1.1",
+    "eslint-plugin-typescript-sort-keys": "0.8.0",
     "husky": "4.2.5",
     "lint-staged": "10.2.2",
     "prettier": "2.0.5",
     "rimraf": "3.0.2",
     "swagger-markdown": "1.2.0",
     "ts-node": "8.10.1",
-    "tslint": "6.1.2",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-plugin-prettier": "2.3.0",
     "typescript": "3.9.2"
   },
   "engines": {
-    "node": ">= 8.0.0"
+    "node": ">= 10.9"
   },
   "files": [
     "dist"
@@ -58,7 +69,7 @@
       "prettier --write"
     ],
     "src/**/*.ts": [
-      "tslint --project tsconfig.json --fix"
+      "eslint --fix"
     ]
   },
   "main": "dist/index.js",
@@ -76,7 +87,7 @@
     "fix:ts": "yarn lint:ts --fix",
     "lint": "yarn lint:ts && yarn lint:other",
     "lint:other": "yarn prettier --list-different",
-    "lint:ts": "tslint --project tsconfig.json",
+    "lint:ts": "eslint --ignore-path .gitignore --ext .ts src/",
     "prettier": "prettier \"*.{json,md}\"",
     "start": "pm2 start",
     "start:dev": "cross-env NODE_DEBUG='luftdaten-server/*' ENVIRONMENT='dev' ts-node src/index.ts",
