--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Florian Keller <github@floriankeller.de>",
+  "author": "Florian Keller <git@ffflorian.de>",
   "dependencies": {
     "@types/swagger-schema-official": "2.0.21",
     "body-parser": "1.19.0",
