--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   ],
   "license": "GPL-3.0",
   "lint-staged": {
-    "*.{json,md}": [
+    "*.{js,json,md}": [
       "prettier --write"
     ],
     "src/**/*.ts": [
@@ -78,10 +78,11 @@
   "repository": "https://github.com/ffflorian/lufdaten-server.git",
   "scripts": {
     "build": "yarn build:node && yarn build:docs",
+    "build:commit": "git rev-parse HEAD > dist/commit",
     "build:node": "tsc",
     "build:docs": "node bin/swagger_docs.js",
     "clean": "rimraf dist",
-    "dist": "yarn clean && yarn build && node bin/commit_hash.js",
+    "dist": "yarn clean && yarn build && yarn build:commit",
     "fix": "yarn fix:other && yarn fix:ts",
     "fix:other": "yarn prettier --write",
     "fix:ts": "yarn lint:ts --fix",
@@ -90,7 +91,7 @@
     "lint:ts": "eslint --ignore-path .gitignore --ext .ts src/",
     "prettier": "prettier \"*.{json,md}\"",
     "start": "pm2 start",
-    "start:dev": "cross-env NODE_DEBUG='luftdaten-server/*' ENVIRONMENT='dev' ts-node src/index.ts",
+    "start:dev": "yarn build:commit && cross-env NODE_DEBUG='luftdaten-server/*' ENVIRONMENT='dev' ts-node src/index.ts",
     "test": "exit 0"
   },
   "version": "1.0.0"
