--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "description": "Receive and serve data from your luftdaten device",
   "devDependencies": {
-    "@ffflorian/eslint-config": "0.6.2",
+    "@ffflorian/eslint-config": "0.8.1",
     "@ffflorian/prettier-config": "0.1.2",
     "@types/body-parser": "1.19.0",
     "@types/compression": "1.7.0",
@@ -25,8 +25,8 @@
     "@types/fs-extra": "9.0.9",
     "@types/node": "~14",
     "@types/swagger-ui-express": "4.1.2",
-    "@typescript-eslint/eslint-plugin": "4.0.0",
-    "@typescript-eslint/parser": "3.10.1",
+    "@typescript-eslint/eslint-plugin": "4.20.0",
+    "@typescript-eslint/parser": "4.20.0",
     "babel-eslint": "10.1.0",
     "cross-env": "7.0.3",
     "eslint": "7.23.0",
@@ -39,6 +39,7 @@
     "eslint-plugin-simple-import-sort": "7.0.0",
     "eslint-plugin-sort-keys-fix": "1.1.1",
     "eslint-plugin-typescript-sort-keys": "1.5.0",
+    "eslint-plugin-unused-imports": "1.1.1",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "prettier": "2.2.1",
